# pobvnc

./: AUTHORS  CMakeLists.txt  README  README.md  clean.sh  index.html  params.json  uninstall.sh
linux32/: pobvnc-x86
linux64/: pobvnc-x86_64
pkgs/Arch/: PKGBUILD
pkgs/Debian/: control  make_Debian_pkg.sh
pkgs/Fedora/: make-pobvnc-rpm.sh  pobvnc.spec
pkgs/installer-win32/: installer-pobvnc.nsi
source/: callbacks.c  callbacks.h  exeicon.rc  gui.xml  install_tigervnc.sh  linux32-resource.c  linux32-resource.xml  linux64-resource.c  linux64-resource.xml  main.c  makefile  pobvnc.desktop  utils.c  utils.h  win32-resource.xml
source/mo/: pobvnc.pot
source/mo/it/: pobvnc.mo  pobvnc.po
